[project]
name = "FreshProxy"
version = "0.1.0"
description = "A minimal Flask proxy for a FreshRSS instance"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name="hstct", email="mail@hostc.at" }
]

keywords = ["Flask", "FreshRSS", "proxy", "API"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Indepenent",
    "License :: OSI Approved :: GNU Affero General Public License v3"
]

dependencies = [
    "Flask~=3.0.0",
    "Flask-Cors~=6.0.0",
    "requests~=2.50.0",
    "python-dotenv~=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest~=9.0.0",
    "pytest-cov~=7.0.0",
]
lint = [
    "black~=24.0.0",
    "flake8~=6.5.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
