[project]
name = "FreshProxy"
version = "0.1.0"
description = "A minimal Flask proxy for a FreshRSS instance"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name="hstct", email="mail@hostc.at" }
]

keywords = ["Flask", "FreshRSS", "proxy", "API"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "Flask~=3.1.0",
    "Flask-Cors~=5.0.0",
    "gunicorn~=23.0.0",
    "requests~=2.32.3",
    "python-dotenv~=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest~=8.3.4",
    "pytest-cov~=6.0.0",
]
lint = [
    "black~=24.10.0",
    "flake8~=7.1.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
